Fix T76717: Set Rotation Mode Incorrectly Recalculates Bone Rotation In Pose Mode

The issue was that we didn't convert the current rotational values.
We simply just switched mode without doing any data conversions.